Fix README run command